# applied-physics-labs

./: .gitignore  .gitmodules  README.md
aplikacje-sieciowe/lab1/: README.org  tcp_client_any_ipv4.c  tcp_server.c
boost/: Containerfile
jezyki-python-i-r/lab10/: classification_models_scikit-learn.ipynb
jezyki-python-i-r/lab12/: intro_to_clusterization.ipynb
jezyki-python-i-r/lab13/: hyperparameters_optimization.ipynb  intro_to_optuna.ipynb  optuna_env.txt
jezyki-python-i-r/lab14/: Intro_to_XAI_with_Dalex_regression_kNN.ipynb
jezyki-python-i-r/lab15/: time_series_part1.ipynb  time_series_part2.ipynb
jezyki-python-i-r/lab4/: perceptron.py  predict.py
jezyki-python-i-r/lab5/: notatki.org  regression_models_scikit-learn-part2.ipynb  regression_models_scikit-learn.ipynb  ydata_profiling.ipynb
jezyki-python-i-r/raport/: raport-smoke-detector-iot.ipynb
lab-jezyki-python-i-r/: README.md
lab-metody-numeryczne/lab1/: exercise1.cpp
lab-metody-numeryczne/lab2/: main.cc
lab-metody-numeryczne/lab3/: main.cc
lab-przetwarzanie-multimediow/lab1/: pm_opencv_podstawy_lab_wyklad.ipynb
lab-wzorce-projektowe/lab2/: CMakeLists.txt  Key.cc  Key.hpp  Keyboard.cc  Keyboard.hpp  main.cc
lab-wzorce-projektowe/lab3/: KeyInterface.hpp  Keyboard.cc  main.cc
med-seminarium/: t-test-example.ipynb
metody-numeryczne/kol1/: graph.ipynb  log.csv  question1.cc  question2.cc  question3.cc
metody-numeryczne/lab3/: main.cc
metody-numeryczne/lab4/: main.cc
metody-numeryczne/lab5/: main.cc
metody-numeryczne/lab6/: func1.csv  func2.csv  func3.csv  main.cc  results-plots.ipynb
metody-numeryczne/lab7/: main.cc
metody-numeryczne/lab8/: main.cc
metody-numeryczne/lab9/: main.cc  second_main.cc
metody-numeryczne/second-order-de-improved-euler/: Untitled.ipynb  graph.ipynb  main.cc
optymalizacja-baz-danych/: README.md  raport.html  raport.org  raport.tex
optymalizacja-baz-danych/queries/: npc_ranking.sql  npc_transactions.sql  opt_npc_transactions.sql  opt_opt_npc_transactions.sql  player_items.sql
optymalizacja-baz-danych/scripts/: add_transaction.sql  create_items.sql  create_maps.sql  create_npcs.sql  create_user.sql  create_users.sql  normal_distribution_demo.sql  opt_add_transaction.sql  populate_location.sql
optymalizacja-baz-danych/structure/: mmo-backbone.sql
przetwarzanie-multimediow/lab2/: pm_2023_lab2-images-intro.ipynb
wp-jupyter/: Containerfile
wzorce-projektowe/lab8/: CMakeLists.txt
wzorce-projektowe/lab8/src/app/: Application.cc  Application.hpp  BoxWindow.cc  BoxWindow.hpp  ICommand.hpp  main.cc
wzorce-projektowe/lab8/src/memento/: CareTaker.cc  CareTaker.hpp  IMemento.hpp  Originator.cc  Originator.hpp  main.cc
zbieranie-i-analiza-danych/zbieranie_klatek_z_kamery/src/: CMakeLists.txt
zbieranie-i-analiza-danych/zbieranie_klatek_z_kamery/src/camera_capture/: main.cc
(+86 files in other folders)
